# routes/api.php
@@ -2,8 +2,8 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\Api\AuthController;
-use App\Http\Controllers\Api\BookController;
+use App\Http\Controllers\API\AuthController;
+use App\Http\Controllers\API\MedicalController;
 
 Route::prefix('user')->group(function () {
     Route::get('/users', function () {
@@ -15,14 +15,15 @@ Route::prefix('user')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:api');
 });
 
-Route::resource('book', BookController::class, [
+
+Route::resource('medic', MedicalController::class, [
         'only' => [
             'index',
             'show'
         ]
     ]);
 
-Route::resource('book', BookController::class, [
+Route::resource('medic', MedicalController::class, [
     'except' => [
         'index',
         'show'
